修改标题和图标

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/svg+xml" href="/imgs/heart-icon.svg" />
+  <title>岁月缱绻 葳蕤生香</title>
 </head>
 
 <body>
